chore: domain to telegramlink

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <iframe id="my_iframe" src="https://abstaging.eu.pythonanywhere.com/dani/" class="responsive-iframe" name="myFrame" style="overflow:hidden" sandbox="allow-same-origin allow-top-navigation allow-scripts allow-forms"></iframe>
+    <iframe id="my_iframe" src="https://abstaging.eu.pythonanywhere.com/telegramlink/" class="responsive-iframe" name="myFrame" style="overflow:hidden" sandbox="allow-same-origin allow-top-navigation allow-scripts allow-forms"></iframe>
 </body>
 </html>
