fix: iframe responsive

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <iframe id="my_iframe" src="https://abstaging.eu.pythonanywhere.com/dani/" class="responsive-iframe" name="myFrame" style="overflow:hidden" sandbox="allow-same-origin allow-top-navigation allow-scripts allow-forms"></iframe>
+    <div class="iframe-wrapper">
+        <iframe id="my_iframe" class="responsive-iframe" src="https://abstaging.eu.pythonanywhere.com/dani/" name="myFrame" style="overflow:hidden" sandbox="allow-same-origin allow-top-navigation allow-scripts allow-forms"></iframe>
+    </div>
 </body>
 </html>
