fix: add jquery

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
         <iframe id="my_iframe" class="responsive-iframe" src="https://abstaging.eu.pythonanywhere.com/dani/" name="myFrame" style="overflow:hidden" sandbox="allow-same-origin allow-top-navigation allow-scripts allow-forms"></iframe>
     </div>
 </body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="/js/index.js"></script>
 </html>
